meeting authorizations: add list API
